Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -16,11 +18,8 @@
     <div class="wrapper">
       <header>
         <h1>Pj1 growinglines</h1>
-        <p>This Course is about generative Design and Generative Algorithms. The work arose with the help of processing in the Course  Input/Output of the FH Potsdam.This Course is about generative Design and Generative Algorithms. The work arose with the help of processing in the Course  Input/Output of the FH Potsdam.This Course is about generative Design and Generative Algorithms. The work arose with the help of processing in the Course  Input/Output of the FH Potsdam.This Course is about generative Design and Generative Algorithms. The work arose with the help of processing in the Course  Input/Output of the FH Potsdam.This course was about generative Design with the help of processing at the FH Potsdam.</p>
-
+        <p>This Course is about generative Design and generative Algorithms. The work arose with the help of processing in the Course  Input/Output of the FH Potsdam. </p>
         <p class="view"><a href="https://github.com/JulianWohlleber/PJ1_GrowingLines">View the Project on GitHub <small>JulianWohlleber/PJ1_GrowingLines</small></a></p>
-
-
         <ul>
           <li><a href="https://github.com/JulianWohlleber/PJ1_GrowingLines/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/JulianWohlleber/PJ1_GrowingLines/tarball/master">Download <strong>TAR Ball</strong></a></li>
@@ -389,12 +388,12 @@ float radius = 50;
 I had the Idea to use the pattern generated in the 2D-Version in my Code to integrate it in a Lamp.  First I built a construct with wood, which was drilled and then interwoven with fishing line. Then I used wool to generate the pattern in the with boulter generated network. 
 At the end I covered the free areas with black carton and recessed a lightbulb and composure.</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/JulianWohlleber">JulianWohlleber</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <footer>
+      <p>Project maintained by <a href="https://github.com/JulianWohlleber">JulianWohlleber</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
 </html>
