Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Pj1 growinglines by JulianWohlleber</title>
+    <title>Project 1 by JulianWohlleber</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Pj1 growinglines</h1>
+        <h1>Project 1</h1>
         <p>This Course is about generative Design and generative Algorithms. The work arose with the help of processing in the Course  Input/Output of the FH Potsdam. </p>
         <p class="view"><a href="https://github.com/JulianWohlleber/PJ1_GrowingLines">View the Project on GitHub <small>JulianWohlleber/PJ1_GrowingLines</small></a></p>
         <ul>
