--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 14. Vielen Dank für deine Hilfe!
 </code></pre>
 
-<p><strong>Results:</strong>
-<img src="https://dl-web.dropbox.com/get/Public%20Stuff/PJ1_12.png?_subject_uid=32925921&amp;w=AAAO98pq8NeCvidDnWvwiOeNgFgAH6BbNiqJvVkeN-DlzQ" alt="2">
-<img src="https://dl-web.dropbox.com/get/Public%20Stuff/PJ1_13.png?_subject_uid=32925921&amp;w=AAC1kpe0MvSiEWVq_GcRv4DqgzFsTXaUasKiUsyFTPaH0g" alt="3">
-<img src="https://dl-web.dropbox.com/get/Public%20Stuff/PJ1_14.png?_subject_uid=32925921&amp;w=AABawErjvOTDxXTIdMZHqTYc5fKh_JhbjaQos1oMwg4bmw" alt="3">
-<img src="https://dl-web.dropbox.com/get/Public%20Stuff/PJ1_15.png?_subject_uid=32925921&amp;w=AAB6GNpN2rrLQMoJOmmMxKOhTK8MBDPRvXFxqy_hBR0qtA" alt="4">
-<img src="https://dl-web.dropbox.com/get/Public%20Stuff/PJ1_18.png?_subject_uid=32925921&amp;w=AAD5_SlRv57lFN1iZFmS6ytIIyKX2Pjbe83vhNU3G4-cHg" alt="5"></p>
+<p><strong>Results:</strong><br>
+<img src="http://julianlucas.de/IOpictures/PJ1_12.png" alt="2">
+<img src="http://julianlucas.de/IOpictures/PJ1_13.png" alt="3">
+<img src="http://julianlucas.de/IOpictures/PJ1_14.png" alt="4">
+<img src="http://julianlucas.de/IOpictures/PJ1_15.png" alt="5">
+<img src="http://julianlucas.de/IOpictures/PJ1_18.png" alt="8"></p>
 
 <h2>
 <a id="realisation---software" class="anchor" href="#realisation---software" aria-hidden="true"><span class="octicon octicon-link"></span></a>REALISATION - Software</h2>
@@ -71,7 +71,7 @@ I really was pretty confident with myself, because processing was the first prog
 On my way towards goal I found a really nice Idea, which I prefered compared to the Recursion-Version of my code: A straight line would run over the screen, it would always "stop"  after a certain length, choose a random direction in the angle of 90° including the one it came from, and then go on towards this direction.   </p>
 
 <p><strong>My first code looked like this:</strong><br>
-<a href="https://vimeo.com/125339378"><img src="https://dl-web.dropbox.com/get/Public%20Stuff/PJ1_21.png?_subject_uid=32925921&amp;w=AACV_8ReUbz2NLmEIHTZHyKdUjyjAiH8rg8J3vxsu7CykA" alt="firstCode2D"></a></p>
+<a href="https://vimeo.com/125339378"><img src="http://julianlucas.de/IOpictures/PJ1_21.png" alt="firstCode2D"></a></p>
 
 <pre><code>  float radius = 20;
 
@@ -176,8 +176,8 @@ On my way towards goal I found a really nice Idea, which I prefered compared to 
 <p>Although I was pretty proud of my first solution I still didn't find it visually attractive all times you started it. The colors where to random, and often didn't fit to each other, so I decided to specify four colors. 
 Also I found out that the occuring pictures often looked better, when the starting points of the four colors where in the edges.  After some rework time, my code Looked like this:  </p>
 
-<p><strong>The final 2D Version:</strong>
- <a href="https://vimeo.com/125339379"><img src="https://dl-web.dropbox.com/get/Public%20Stuff/PJ1_22.png?_subject_uid=32925921&amp;w=AABeDtZnBQDd4eowidzl3jseuFvDDTYGzAaQSyV_k5xctw" alt="finalVersion"></a></p>
+<p><strong>The final 2D Version:</strong><br>
+ <a href="https://vimeo.com/125339379"><img src="http://julianlucas.de/IOpictures/PJ1_22.png" alt="finalVersion"></a></p>
 
 <pre><code>  float radius = 30;
 
@@ -290,7 +290,7 @@ In the threedimensional solution decreased the lines to 1 single line, after I r
 For an improved visual clarity I developed a kind of 3rd-dimension color: As the line moves in the z-dimension, the color gets warmer (nearer) and colder (further). The color scheme ranges from dark blue to red.  </p>
 
 <p><strong>The final 3D Version:</strong><br>
-  <a href="https://vimeo.com/125339380"><img src="https://dl-web.dropbox.com/get/Public%20Stuff/PJ1_23.png?_subject_uid=32925921&amp;w=AABLT6z4dDOXjStV3TnNS6leArYtHDU3fVpulprUaLVEAw" alt="3D"></a></p>
+  <a href="https://vimeo.com/125339380"><img src="http://julianlucas.de/IOpictures/PJ1_23.png" alt="3D"></a></p>
 
 <pre><code>//root size
 float radius = 50;
